--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -64,3 +64,14 @@ body {
 .overflow_none::-webkit-scrollbar {
   display: none;
 }
+
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+/* Firefox */
+input[type=number] {
+  -moz-appearance: textfield;
+}
